texture bug fix

--- a/src/main/resources/assets/broken_world/lang/en_us.json
+++ b/src/main/resources/assets/broken_world/lang/en_us.json
@@ -34,6 +34,7 @@
   "item.broken_world.boulder": "Boulder",
   "item.broken_world.silicon": "Silicon",
   "item.broken_world.aa_battery": "AA Battery", 
+  "item.broken_world.sonar": "Sonar",
 
   "item.broken_world.oil_bucket": "Oil Bucket", 
   "item.broken_world.polluted_water_bucket": "Polluted Water Bucket", 
