--- a/src/main/resources/assets/broken_world/lang/en_us.json
+++ b/src/main/resources/assets/broken_world/lang/en_us.json
@@ -23,7 +23,7 @@
   "block.broken_world.crusher": "Crusher",
   "block.broken_world.solar_panel": "Solar Panel",
   "block.broken_world.iron_sheet_box": "Iron Sheet Box",
-  "block.broken_world.shifter": "Shifter",
+  "block.broken_world.sifter": "Sifter",
   "block.broken_world.scanner": "Scanner",
 
   "item.broken_world.titanium_ingot": "Titanium Ingot",
