--- a/src/main/resources/assets/broken_world/lang/en_us.json
+++ b/src/main/resources/assets/broken_world/lang/en_us.json
@@ -36,6 +36,8 @@
   "item.broken_world.aa_battery": "AA Battery", 
   "item.broken_world.sonar": "Sonar",
 
+  "item.broken_world.density_meter": "Density Meter",
+
   "item.broken_world.oil_bucket": "Oil Bucket", 
   "item.broken_world.polluted_water_bucket": "Polluted Water Bucket", 
   "item.broken_world.acid_bucket": "Acid Bucket", 
