Add block and item names

--- a/src/main/resources/assets/broken_world/lang/en_us.json
+++ b/src/main/resources/assets/broken_world/lang/en_us.json
@@ -25,6 +25,44 @@
   "block.broken_world.iron_sheet_box": "Iron Sheet Box",
   "block.broken_world.sifter": "Sifter",
   "block.broken_world.scanner": "Scanner",
+  "block.broken_world.miner": "Miner",
+  "block.broken_world.chunkloader": "Chunkloader",
+  "block.broken_world.teleport_platform": "Teleport Platform",
+  "block.broken_world.thermal_generator": "Thermal Generator",
+  "block.broken_world.pump": "Pump",
+  "block.broken_world.hydro_generator": "Hydro Generator",
+  "block.broken_world.wind_turbine": "Wind Turbine",
+  "block.broken_world.advanced_furnace": "Advanced Furnace",
+  "block.broken_world.fabricator": "fabricator",
+  "block.broken_world.fabricator_extension": "Fabricator Extension",
+  "block.broken_world.centrifuge": "Centrifuge",
+  "block.broken_world.road": "Road",
+  "block.broken_world.magnetite": "Magnetite",
+  "block.broken_world.reinforced_glass": "Reinforced_glass",
+  "block.broken_world.machine_shell": "Machine Shell",
+  "block.broken_world.charred_dirt": "Charred Dirt",
+  "block.broken_world.cracked_concrete": "Cracked Concrete",
+  "block.broken_world.grassy_bricks": "Grassy Bricks",
+  "block.broken_world.rolling_door": "Rolling Door",
+  "block.broken_world.glass_door": "Glass Door",
+  "block.broken_world.clone_vat": "Clone Vat",
+  "block.broken_world.glitch": "Glitch",
+  "block.broken_world.code": "Code",
+  "block.broken_world.data_upload_node": "Data Upload Node",
+  "block.broken_world.core": "Core",
+  "block.broken_world.spawn_pointer": "Spawn Pointer",
+  "block.broken_world.isotropic_ice": "Isotropic Ice",
+  "block.broken_world.magnetic_stone": "Magnetic Stone",
+  "block.broken_world.solid_plasma": "Solid Plasma",
+  "block.broken_world.volcanic_stone": "Volcanic Stone",
+  "block.broken_world.aurora_teleporter_frame": "Aurora Teleporter Frame",
+  "block.broken_world.floating_teleporter_frame": "Floating Teleporter Frame",
+  "block.broken_world.kyanite_ore": "Kyanite Ore",
+  "block.broken_world.tin_ore": "Tin Ore",
+  "block.broken_world.infused_crystal": "Infused Crystal",
+  "block.broken_world.kyanite_block": "Kyanite Block",
+  "block.broken_world.tungsten_block": "Tungsten Block",
+  "block.broken_world.compressor": "Compressor",
 
   "item.broken_world.titanium_ingot": "Titanium Ingot",
   "item.broken_world.tungsten_ingot": "Tungsten Ingot",
@@ -35,6 +73,51 @@
   "item.broken_world.silicon": "Silicon",
   "item.broken_world.aa_battery": "AA Battery", 
   "item.broken_world.sonar": "Sonar",
+  "item.broken_world.lithium_ingot": "Lithium Ingot",
+  "item.broken_world.zinc_ingot": "Zinc Ingot",
+  "item.broken_world.copper_coil": "Copper Coil",
+  "item.broken_world.plastic_plate": "Plastic Plate",
+  "item.broken_world.memory_chip": "Memory Chip",
+  "item.broken_world.steel_ingot": "Steel Ingot",
+  "item.broken_world.asphalt": "Asphalt",
+  "item.broken_world.motor": "Motor",
+  "item.broken_world.iron_plate": "Iron Plate",
+  "item.broken_world.magnet_ingot": "Magnet Ingot",
+  "item.broken_world.spring_roll": "Spring Roll",
+  "item.broken_world.mesh": "Mesh",
+  "item.broken_world.hyper_pocket": "Hyper Pocket",
+  "item.broken_world.g17": "G17",
+  "item.broken_world.light_ammo": "Light Ammo",
+  "item.broken_world.smg": "SMG",
+  "item.broken_world.heavy_ammo": "Heavy Ammo",
+  "item.broken_world.mk144": "MK144",
+  "item.broken_world.sniper_ammo": "Sniper Ammo",
+  "item.broken_world.hass_03": "HASS 03",
+  "item.broken_world.hyper_spear": "Hyper Spear",
+  "item.broken_world.kinetic_helmet": "Kinetic Helmet",
+  "item.broken_world.kinetic_suit": "Kinetic Suit",
+  "item.broken_world.kinetic_leg": "Kinetic Leg",
+  "item.broken_world.kinetic_boots": "Kinetic Boots",
+  "item.broken_world.qs_093": "QS 093",
+  "item.broken_world.metallic_card": "Metallic Card",
+  "item.broken_world.sulfuric_card": "Sulfuric Card",
+  "item.broken_world.lush_card": "Lush Card",
+  "item.broken_world.floating_card": "Floating Card",
+  "item.broken_world.aurora_card": "Aurora Card",
+  "item.broken_world.rookie_wand": "Rookie Wand",
+  "item.broken_world.expert_wand": "Expert Wand",
+  "item.broken_world.master_wand": "Master Wand",
+  "item.broken_world.grandmaster_wand": "Grandmaster Wand",
+  "item.broken_world.kyanite_shard": "Kyanite Shard",
+  "item.broken_world.blank_rune": "Blank Rune",
+  "item.broken_world.galactica_rune": "Galactica Rune",
+  "item.broken_world.earth_rune": "Earth Rune",
+  "item.broken_world.fire_rune": "Fire Rune",
+  "item.broken_world.liquid_rune": "Liquid Rune",
+  "item.broken_world.wind_rune": "Wind Rune",
+  "item.broken_world.mountainous_rune": "Mountainous Rune",
+  "item.broken_world.sink_rune": "Sink Rune",
+  "item.broken_world.thunder_rune": "Thunder Rune",
 
   "item.broken_world.oil_bucket": "Oil Bucket", 
   "item.broken_world.polluted_water_bucket": "Polluted Water Bucket", 
