--- a/src/main/resources/assets/broken_world/lang/en_us.json
+++ b/src/main/resources/assets/broken_world/lang/en_us.json
@@ -63,6 +63,23 @@
   "block.broken_world.kyanite_block": "Kyanite Block",
   "block.broken_world.tungsten_block": "Tungsten Block",
   "block.broken_world.compressor": "Compressor",
+  "block.broken_world.assembler": "Assembler",
+  "block.broken_world.electrolyzer": "Electrolyzer",
+  "block.broken_world.reactor": "Reactor",
+  "block.broken_world.rubber_log": "Rubber Log",
+  "block.broken_world.natural_rubber_log": "Natural Rubber Log",
+  "block.broken_world.cut_rubber_log": "Cut Rubber Log",
+  "block.broken_world.rubber_leaves": "Rubber Leaves",
+  "block.broken_world.rubber_sapling": "Rubber Sapling",
+  "block.broken_world.extractor": "Extractor",
+  "block.broken_world.weaponry": "Weaponry",
+  "block.broken_world.wooden_pipe": "Wooden Pipe",
+  "block.broken_world.double_copper_cable": "Double Copper Cable",
+  "block.broken_world.quad_copper_cable": "Quad Copper Cable",
+  "block.broken_world.covered_copper_cable": "Covered Copper Cable",
+  "block.broken_world.covered_double_copper_cable": "Covered Double_copper Cable",
+  "block.broken_world.covered_quad_copper_cable": "Covered Quad Copper Cable",
+  "block.broken_world.uv": "UV Demostration",
 
   "item.broken_world.titanium_ingot": "Titanium Ingot",
   "item.broken_world.tungsten_ingot": "Tungsten Ingot",
@@ -118,6 +135,10 @@
   "item.broken_world.mountainous_rune": "Mountainous Rune",
   "item.broken_world.sink_rune": "Sink Rune",
   "item.broken_world.thunder_rune": "Thunder Rune",
+  "item.broken_world.tin_ingot": "Tin Ingot",
+  "item.broken_world.density_meter": "Density Meter",
+  "item.broken_world.bowl_of_latex": "Bowl of Latex",
+  "item.broken_world.rubber": "Rubber",
 
   "item.broken_world.density_meter": "Density Meter",
 
