Gas Collector WIP

--- a/src/main/resources/assets/broken_world/lang/en_us.json
+++ b/src/main/resources/assets/broken_world/lang/en_us.json
@@ -80,6 +80,7 @@
   "block.broken_world.covered_double_copper_cable": "Covered Double_copper Cable",
   "block.broken_world.covered_quad_copper_cable": "Covered Quad Copper Cable",
   "block.broken_world.uv": "UV Demostration",
+  "block.broken_world.gas_collector": "Gas Collector",
 
   "item.broken_world.titanium_ingot": "Titanium Ingot",
   "item.broken_world.tungsten_ingot": "Tungsten Ingot",
