Add funny death note for electric shock
Now one needs to think twice before he/she/it considers killing creeper
with cables

--- a/src/main/resources/assets/broken_world/lang/en_us.json
+++ b/src/main/resources/assets/broken_world/lang/en_us.json
@@ -147,5 +147,7 @@
   "item.broken_world.polluted_water_bucket": "Polluted Water Bucket", 
   "item.broken_world.acid_bucket": "Acid Bucket", 
 
-  "itemGroup.broken_world.itemgroup": "Broken World"
+  "itemGroup.broken_world.itemgroup": "Broken World",
+
+  "death.attack.electricShock": "That's how %1$s lost engineering license. "
 }
