--- a/src/main/resources/assets/broken_world/lang/en_us.json
+++ b/src/main/resources/assets/broken_world/lang/en_us.json
@@ -33,12 +33,12 @@
   "block.broken_world.hydro_generator": "Hydro Generator",
   "block.broken_world.wind_turbine": "Wind Turbine",
   "block.broken_world.advanced_furnace": "Advanced Furnace",
-  "block.broken_world.fabricator": "fabricator",
+  "block.broken_world.fabricator": "Fabricator",
   "block.broken_world.fabricator_extension": "Fabricator Extension",
   "block.broken_world.centrifuge": "Centrifuge",
   "block.broken_world.road": "Road",
   "block.broken_world.magnetite": "Magnetite",
-  "block.broken_world.reinforced_glass": "Reinforced_glass",
+  "block.broken_world.reinforced_glass": "Reinforced Glass",
   "block.broken_world.machine_shell": "Machine Shell",
   "block.broken_world.charred_dirt": "Charred Dirt",
   "block.broken_world.cracked_concrete": "Cracked Concrete",
@@ -65,7 +65,7 @@
   "block.broken_world.compressor": "Compressor",
   "block.broken_world.assembler": "Assembler",
   "block.broken_world.electrolyzer": "Electrolyzer",
-  "block.broken_world.reactor": "Reactor",
+  "block.broken_world.reaction_kettle": "Reaction Kettle",
   "block.broken_world.rubber_log": "Rubber Log",
   "block.broken_world.natural_rubber_log": "Natural Rubber Log",
   "block.broken_world.cut_rubber_log": "Cut Rubber Log",
@@ -77,10 +77,17 @@
   "block.broken_world.double_copper_cable": "Double Copper Cable",
   "block.broken_world.quad_copper_cable": "Quad Copper Cable",
   "block.broken_world.covered_copper_cable": "Covered Copper Cable",
-  "block.broken_world.covered_double_copper_cable": "Covered Double_copper Cable",
+  "block.broken_world.covered_double_copper_cable": "Covered Double Copper Cable",
   "block.broken_world.covered_quad_copper_cable": "Covered Quad Copper Cable",
   "block.broken_world.uv": "UV Demostration",
+  "block.broken_world.rubber_planks": "Rubber Planks",
+  "block.broken_world.steel_shell": "Steel Shell",
+  "block.broken_world.refinery": "Refinery",
   "block.broken_world.gas_collector": "Gas Collector",
+  "block.broken_world.sulfur_ore": "Sulfur Ore",
+  "block.broken_world.aluminium_ore": "Aluminium Ore",
+  "block.broken_world.battery": "Battery",
+  "block.broken_world.lead_ore": "Lead Ore",
 
   "item.broken_world.titanium_ingot": "Titanium Ingot",
   "item.broken_world.tungsten_ingot": "Tungsten Ingot",
@@ -140,12 +147,30 @@
   "item.broken_world.density_meter": "Density Meter",
   "item.broken_world.bowl_of_latex": "Bowl of Latex",
   "item.broken_world.rubber": "Rubber",
+  "item.broken_world.raw_tin": "Raw Tin",
+  "item.broken_world.centrifuge_axle": "Centrifuge Axle",
+  "item.broken_world.heating_wire": "Heating Wire",
+  "item.broken_world.gas_tank": "Gas Tank",
+  "item.broken_world.oxygen_tank": "Oxygen Tank",
+  "item.broken_world.steel_plate": "Steel Plate",
+  "item.broken_world.circuit_board": "Circuit Board",
+  "item.broken_world.bronze_ingot": "Bronze Ingot",
+  "item.broken_world.tinplate": "Tinplate",
+  "item.broken_world.chip": "Chip",
+  "item.broken_world.sulfur": "Sulfur",
+  "item.broken_world.raw_aluminium": "Raw Aluminium",
+  "item.broken_world.aluminium_ingot": "Aluminium Ingot",
+  "item.broken_world.lead_ingot": "Lead Ingot",
+  "item.broken_world.la_battery": "LA Battery",
 
   "item.broken_world.density_meter": "Density Meter",
 
   "item.broken_world.oil_bucket": "Oil Bucket", 
   "item.broken_world.polluted_water_bucket": "Polluted Water Bucket", 
   "item.broken_world.acid_bucket": "Acid Bucket", 
+  "item.broken_world.gasoline_bucket": "Gasoline Bucket", 
+  "item.broken_world.aether_bucket": "Aether Bucket", 
+  "item.broken_world.latex_bucket": "Latex Bucket", 
 
   "itemGroup.broken_world.itemgroup": "Broken World",
 
