Add more translations

--- a/src/main/resources/assets/broken_world/lang/zh_cn.json
+++ b/src/main/resources/assets/broken_world/lang/zh_cn.json
@@ -134,15 +134,15 @@
   "item.broken_world.master_wand": "大师魔杖",
   "item.broken_world.grandmaster_wand": "大地球魔杖",
   "item.broken_world.kyanite_shard": "蓝晶石碎片",
-  "item.broken_world.blank_rune": "空白符文",
-  "item.broken_world.galactica_rune": "银河符文",
-  "item.broken_world.earth_rune": "土符",
-  "item.broken_world.fire_rune": "火符",
-  "item.broken_world.liquid_rune": "水符",
-  "item.broken_world.wind_rune": "风符",
-  "item.broken_world.mountainous_rune": "山符",
-  "item.broken_world.sink_rune": "洗碗槽符文",
-  "item.broken_world.thunder_rune": "雷符",
+  "item.broken_world.blank_rune": "空白八卦",
+  "item.broken_world.galactica_rune": "乾",
+  "item.broken_world.earth_rune": "坤",
+  "item.broken_world.fire_rune": "離",
+  "item.broken_world.liquid_rune": "坎",
+  "item.broken_world.wind_rune": "巽",
+  "item.broken_world.mountainous_rune": "艮",
+  "item.broken_world.marsh_rune": "兑卦",
+  "item.broken_world.thunder_rune": "震",
   "item.broken_world.tin_ingot": "锡锭",
   "item.broken_world.density_meter": "密度计",
   "item.broken_world.bowl_of_latex": "一碗乳胶",
@@ -161,7 +161,7 @@
   "item.broken_world.raw_aluminium": "生铝",
   "item.broken_world.aluminium_ingot": "铝锭",
   "item.broken_world.lead_ingot": "铅锭",
-  "item.broken_world.la_battery": "LA电池",
+  "item.broken_world.la_battery": "铅酸电池",
 
   "item.broken_world.oil_bucket": "油桶",
   "item.broken_world.polluted_water_bucket": "污水桶",
@@ -169,6 +169,17 @@
   "item.broken_world.gasoline_bucket": "汽油桶",
   "item.broken_world.aether_bucket": "以太桶",
   "item.broken_world.latex_bucket": "乳胶桶",
+
+  "item.broken_world.copper_pickaxe": "铜镐",
+  "item.broken_world.copper_axe": "铜斧",
+  "item.broken_world.copper_shovel": "铜铲",
+  "item.broken_world.copper_hoe": "铜锄",
+  "item.broken_world.copper_sword": "铜剑",
+  "item.broken_world.tungsten_pickaxe": "钨镐",
+  "item.broken_world.tungsten_axe": "钨斧",
+  "item.broken_world.tungsten_shovel": "钨铲",
+  "item.broken_world.tungsten_hoe": "钨锄",
+  "item.broken_world.tungsten_sword": "钨剑",
 
   "itemGroup.broken_world.itemgroup": "破碎世界",
 
