Infusing Table GUI almost finished

--- a/src/main/resources/assets/broken_world/lang/en_us.json
+++ b/src/main/resources/assets/broken_world/lang/en_us.json
@@ -187,5 +187,13 @@
 
   "death.attack.electricShock": "That's how %1$s lost engineering license. ",
 
-  "gui.infusion_table.search_hint": "Search..."
+  "gui.infusion_table.search_hint": "Search...",
+  "gui.infusion_table.back": "Back",
+
+  "container.infuse": "Infuse",
+  "container.enchant.level.max": "Max Level: %s",
+  "container.enchant.level.min": "Minimum Level: %s",
+
+  "enchantment.broken_world.soul_leeching": "Soul Leeching",
+  "enchantment.broken_world.soul_pully": "Soul Pully"
 }
